collapsed stylesheets together, fixed featured speaker

--- a/_assets/css/_theme-overrides.scss
+++ b/_assets/css/_theme-overrides.scss
@@ -72,7 +72,7 @@ body {
   }
 
   .item img {
-    border-radius: 100%;
+    // border-radius: 100%;
     box-shadow: 0 0 100px 50px black;
     transform: translate(-50%) scale(1.1);
   }
